# uAlgoTrade

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  package.json
.github/: pull_request_template.md
COWORK/: .env.example  .gitignore  README.md  docker-compose.yml  setup-cowork-repo.sh
COWORK/Seo-Ads/: .env  .env.example  Dockerfile  pyproject.toml
COWORK/Seo-Ads/examples/: integration.html
COWORK/Seo-Ads/src/: main.py
COWORK/Seo-Ads/src/agents/: __init__.py  base.py  llm_provider.py  llm_router.py  models.py  orchestrator.py
COWORK/Seo-Ads/src/agents/subagents/: __init__.py  blog_writer.py  campaign_planner.py  content_writer.py  cultural_adapter.py  hashtag_researcher.py  seo_optimizer.py
COWORK/Seo-Ads/src/api/endpoints/: agent.py  blog.py
COWORK/Seo-Ads/src/models/: blog.py
COWORK/Seo-Ads/src/services/: content_generator.py
COWORK/cowork-ai/: .env.example  Dockerfile  pyproject.toml
COWORK/cowork-ai/src/: main.py
COWORK/cowork-ai/src/endpoints/: ai.py
COWORK/cowork-ai/src/services/: recommender.py  scheduler.py
COWORK/cowork-api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
COWORK/cowork-api/src/: config.py  main.py
COWORK/cowork-api/src/core/: deps.py  security.py
COWORK/cowork-api/src/db/: session.py
COWORK/cowork-api/src/models/: base.py  blog_post.py  booking.py  membership.py  space.py  user.py
COWORK/cowork-api/src/routers/: auth.py  blog.py  bookings.py  spaces.py  stripe_billing.py
COWORK/cowork-api/src/services/: blog_service.py  booking_service.py  space_service.py  user_service.py
Med-Seo-Blog/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
Med-Seo-Blog/src/: config.py  main.py
Med-Seo-Blog/src/agents/: blog_writer.py  keyword_researcher.py  llm_provider.py  llm_router.py  orchestrator.py  schema_generator.py  seo_optimizer.py
Med-Seo-Blog/src/api/endpoints/: blog.py  content.py  seo.py
Med-Seo-Blog/src/data/: medical_keywords.py
Med-Seo-Blog/src/models/: content.py
Seo-Ads/: .env.example  .gitignore  README.md  pyproject.toml
agents/: DEVELOPER_AGENT_SPEC.md  TRADING_AGENT_SPEC.md
ai-engine/: Dockerfile  README.md  pyproject.toml  railway.toml
ai-engine/src/: config.py  main.py
ai-engine/src/agents/: README.md  alpha_scout.py  base_agent.py  orchestrator.py  quant_lab.py  risk_sentinel.py  technical_analyst.py
ai-engine/src/api/: README.md  router.py
ai-engine/src/api/endpoints/: agents.py  content.py  health.py  optimization.py  orchestrator.py  signals.py  ws.py
ai-engine/src/core/: README.md  decision_engine.py  memory.py  message_bus.py
ai-engine/src/indicators/: README.md  bollinger.py  elliott_wave.py  rsi.py  smc.py  support_resistance.py
ai-engine/src/models/: README.md  agent_config.py  signal.py  trade.py
ai-engine/src/services/: README.md  binance_ws.py  content_generator.py  db.py  sentiment.py  telegram_notifier.py
ai-engine/src/tasks/: README.md  scan_loop.py  scheduler.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  FinancePlatform.sln  README.md  railway.toml
database/: README.md
docs/: AGENT_ARCHITECTURE.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  README.md
frontend/: .dockerignore  (+7 more)
(+216 files in other folders)
