[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ukeytr-ai-engine"
version = "0.1.0"
description = "AI Agent Swarm Engine for uKeyTr Trading Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "textblob>=0.18.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "websockets>=14.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
