[project]
name = "cowork-ai"
version = "1.0.0"
description = "COWORK AI — Smart scheduling, occupancy prediction & recommendations"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
